<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="IoTDataStruct" Id="{fc0d2c4d-2d17-4745-92e5-1b1ce624849b}">
    <Declaration><![CDATA[TYPE IoTDataStruct :
STRUCT
	{attribute 'iot.DisplayName' := 'Pulse 1'}
	{attribute 'iot.ReadOnly' := 'TRUE'}
	Puls1		:REAL;
	
	{attribute 'iot.DisplayName' := 'Pulse 2'}
	{attribute 'iot.ReadOnly' := 'TRUE'}
	Puls2	 	: REAL;
	
	{attribute 'iot.DisplayName' := 'Sinus Slow'}
	{attribute 'iot.ReadOnly' := 'TRUE'}
	Sinus_Slow 	: REAL;
	
	{attribute 'iot.DisplayName' := 'Generate Data'}
	bGenerateData : BOOL := TRUE;
	
	{attribute 'iot.DisplayName' := 'Reset Data'}
	bClearValues 	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>